--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,12 @@ section[id*='tab'] {
 .tab.active {
     background-color: rgba(0, 0, 0, 1);
 }
+
+
+.success {
+    border: 2px solid green;
+}
+
+.fail {
+    border: 2px solid red;
+}
