--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,54 @@
-.container {
-    height: 100vh;
-    display: flex;
+body {
+    background-color: #E0E1DD;
+    color: #E0E1DD;
 }
 
 .content-box {
-    width: 100%;
-    height: 70%;
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    border: solid grey 1px;
-    margin: auto;
+    height: 100%;
+    min-height: 500px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: #778DA9;
 
+    /* color: #fff; */
+    border-radius: 15px;
+    border: 2px solid #415A77;
+}
+
+.far,
+.fas {
+    color: #2A3A4C;
+    padding-right: 10px;
+}
+
+a .far:hover,
+a .fas:hover {
+    color: #E0E1DD;
+}
+
+.table {
+    color: #0D1B2A;
+}
+
+td {
+    border-color: #1B263B !important;
+}
+
+.table thead {
+    color: #E0E1DD;
+    background-color: #1B263B;
+}
+
+.btn-primary {
+    background-color: #3C526D;
+    border: 0;
+}
+
+.btn-primary:hover {
+
+    background-color: #2A3A4C;
+    border: 0;
 }
 
 .hide {
@@ -21,7 +59,10 @@
 }
 
 h2 {
-    padding-bottom: 30px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #0D1B2A;
+    color: #fff;
 }
 
 
@@ -45,13 +86,13 @@ section[id*='tab'] {
     width: 13px;
     border-radius: 50%;
     border: none;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #415A77;
     display: inline-block;
     margin-right: 8px;
 }
 
 .tab.active {
-    background-color: rgba(0, 0, 0, 1);
+    background-color: #E0E1DD;
 }
 
 
