--- a/css/main.css
+++ b/css/main.css
@@ -7,19 +7,21 @@ body {
     height: 100%;
     min-height: 500px;
     margin-top: 30px;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
     padding: 20px;
     background-color: #778DA9;
+    position: relative;
 
     /* color: #fff; */
     border-radius: 15px;
     border: 2px solid #415A77;
+    display: inline-block;
+    width: 100%;
 }
 
 .far,
 .fas {
     color: #2A3A4C;
-    padding-right: 10px;
 }
 
 a .far:hover,
@@ -65,6 +67,17 @@ h2 {
     color: #fff;
 }
 
+h2>.fas,
+h2>.far {
+    padding-right: 10px;
+}
+
+.input-end {
+    border-bottom: 1px dotted #0D1B2A;
+
+    margin-bottom: 20px;
+    width: 100%;
+}
 
 section[id*='tab'] {
     animation: ;
@@ -102,4 +115,15 @@ section[id*='tab'] {
 
 .fail {
     border: 2px solid red;
+}
+
+#progress-indicator {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#navigation {
+    padding-bottom: 10px;
 }
