Added CSS to enable net worth chart to scroll horizontally

--- a/css/main.css
+++ b/css/main.css
@@ -238,3 +238,10 @@ input[readonly] {
 .circle {
     stroke: #0D1B2A;
 }
+
+
+/* let the d3 chart div be scrollable on smaller devices */
+#netWorthChart {
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
